--- a/css/style.css
+++ b/css/style.css
@@ -31,6 +31,7 @@ width: 100%;
   padding: 5px;
 }
 
+
 #movingimages {
 position: relative;
 padding: 10px;
@@ -51,6 +52,7 @@ nav{
 text-align: center;
 }
 
+
 ul {
   list-style-type: none;
   margin: -8px;
@@ -69,7 +71,11 @@ li a {
   text-align: center;
   padding: 16px 20px;
   text-decoration: none;
+
+div {
+align-items: center;
 }
+
 
 p, li {
 font-family:"Ubuntu Condensed", sans-serif;
