--- a/css/style.css
+++ b/css/style.css
@@ -6,25 +6,48 @@ body {
   font-family: "Patrick Hand SC";
   color: rgb(93,16,26);
 }
-main {
-border: 5px rgb(193,133,41) solid;
-margin: 0 auto;
-background-color: transparent;
-width: 600px;
-}
-
 
 header {
-border-top: 3px transparent
-border-bottom: 40px solid rgb(93,16,26);
-padding-top: 20px;
+font-size: 21px;
+border-top: 3px transparent;
+padding-top: 40px;
 padding-bottom: 20px;
-min-height: 140px;
+min-height: 100px;
 color: rgb(93,16,26);
 }
 
+main {
+  border: 5px rgb(193,133,41) solid;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  background-color: transparent;
+  width: 700px;
+}
+
+#main {
+  border: 5px rgb(193,133,41) solid;
+  background-color: white;
+  width: 500px;
+}
+
+#experience {
+margin-bottom: 10px;
+margin-top: -16px;
+text-align: left;
+padding-left: 5px;
+}
+
 #education {
-  top margin-top: 0;
+  margin-top: 5px;
+  margin-bottom: -7px;
+  padding-left: 5px;
+  text-align: left;
+}
+
+#index {
+margin-right: -30px;
+margin-left: -30px;
+margin-bottom: 20px;
 }
 
 #movingit {
@@ -33,23 +56,172 @@ color: rgb(93,16,26);
   bottom: 42px;
 }
 
+#movingit2 {
+margin-bottom: -7px;
+margin-top: -18px;
+}
+
+#movingit3 {
+  margin-bottom: -7px;
+  margin-top: -19px;
+}
+
 #navbarstyle {
 position: absolute;
-bottom: 0px;
+bottom: 0;
 width: 100%;
+left: 0;
 }
 
 #ulstylebar {
   padding: 5px;
 }
 
+p.double {border-style: double;}
 
 #movingimages {
-position: relative;
+align-items: center;
 padding: 10px;
 margin: auto;
 margin-top: 170px;
 width: 60%;
+}
+
+#fixingit {
+  margin-top: -22px;
+  margin-left: 10px;
+  text-align: left;
+}
+
+#fixingit2 {
+margin-top: 20px;
+margin: auto;
+margin-left: -70PX;
+margin-right: 125px;
+text-align: left;
+}
+
+#movinglink {
+  margin-top: -11px
+}
+
+#formatting {
+margin-top: -20px;
+}
+
+#formatting2  {
+  margin-top: -22px;
+  margin-left: 10px;
+}
+
+#formatting3  {
+margin-left: 5px;
+margin-right: 458px;
+margin-bottom: 20px;
+text-align: left;
+}
+
+#skills {
+  margin-top: -42px;
+  margin-left: 10px;
+}
+
+#totheleft {
+margin-top: -20px;
+}
+
+#controls {
+  margin-top: -45px;
+  margin-left: 5px;
+}
+
+#moving {
+margin-right: 543px;
+margin-top: -23px;
+margin-left: -5px;
+}
+
+#moving1 {
+  margin-right: 530px;
+  margin-left: 6px;
+}
+
+#moving2 {
+margin-right: 520px;
+}
+
+#moving3 {
+  margin-right: 524px;
+}
+
+#moving4  {
+margin-right: 500px;
+}
+
+#moving5  {
+  margin-right: 565px;
+}
+
+#upup {
+margin-top: -10px;
+margin-left: 5px;
+}
+
+#camera {
+  margin-right: 558px;
+  margin-top: -23px;
+
+}
+
+#camera2  {
+margin-right: 570px;
+margin-top: -5px;
+}
+
+
+#edit {
+  margin-top: -13px;
+  margin-left: 6px;
+}
+
+#edit1  {
+margin-right: 640px;
+margin-top: -20px;
+}
+
+#edit2 {
+  margin-top: -5px;
+  margin-right: 588px;
+}
+
+#edit3  {
+margin-right: 631px;
+margin-top: -5px;
+}
+
+#adobe  {
+  margin-top: -15px;
+  margin-left: 5px;
+}
+
+#shop {
+margin-right: 606px;
+margin-top: -20px;
+}
+
+#in {
+  margin-top: -6px;
+  margin-right: 620px;
+}
+
+#ill  {
+margin-right: 600px;
+margin-top: -6px;
+}
+
+#activities {
+  margin-top: -16px;
+  margin-left: 5px;
 }
 
 h1 {
@@ -57,7 +229,14 @@ h1 {
   position:static;
   text-align: center;
   margin: auto;
+}
 
+h2 {
+font-size: 45px;
+}
+
+h3 {
+  padding-left: 5px;
 }
 
 nav{
@@ -65,9 +244,7 @@ text-align: center;
 background-color: rgb(93,16,26);
 }
 
-
 ul {
-  list-style-type: none;
   margin: -6px;
   padding: 17px;
   overflow: hidden;
@@ -87,15 +264,15 @@ li a {
 
 div {
 align-items: center;
+border:
 }
-
 
 a {
   color: rgb(93,16,26);
 }
 
 a:visited {
-color: white;
+color: black;
 }
 
 a:hover {
@@ -104,4 +281,5 @@ a:hover {
 
 p {
 margin-top: 0;
+padding-left: 5px;
 }
