--- a/print.css
+++ b/print.css
@@ -5,10 +5,39 @@ font-size: 12pt;
 font-family: serif;
 }
 
-
-
-
-
 nav {
   display: none;
+}
+
+h1 {
+font-size: 20px;
+text-align: left;
+color: rgb(93,16,26);
+padding-top: px;
+}
+
+h2 {
+  font-size: 18px;
+  text-align: left;
+  color: rgb(93,16,26);
+}
+
+h3 {
+font-size: 16px;
+color: rgb(93,16,26);
+}
+
+p {
+  font-size: 14-px;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  margin-right: 150px;
+  margin-left: 80px;
+}
+
+
+#index {
+margin-right: -30px;
+margin-left: -30px;
+margin-bottom: 20px;
 }
