--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@ color: rgb(93,16,26);
 }
 
 a:visited {
-  color: black;
+  color: white;
 }
 
 a:hover {
@@ -86,7 +86,6 @@ p {
 
 #main {
   border: 3px rgb(193,133,41) solid;
-  background-color: white;
   width: 300px;
   height: 600px;
 }
@@ -185,6 +184,7 @@ text-align: left;
 #skills {
   margin-top: -42px;
   margin-left: 10px;
+  text-align: left;
 }
 
 #totheleft {
@@ -288,4 +288,8 @@ margin-top: -6px;
 font-size: 35px;
 text-align: center;
 margin-top: -40px;
+}
+
+#video3 {
+  margin-left: 205px;
 }
