--- a/mobile.css
+++ b/mobile.css
@@ -16,12 +16,14 @@ main {
 
 #video1 {
 width: 320px;
-height: 215px;margin-left: 105px;
+height: 215px;
+margin-left: 105px;
 }
 
 #video2 {
   width: 320px;
   height: 215px;
+  margin-right: -120px;
 }
 
 .image {
